margin collapsing fix

--- a/commons.css
+++ b/commons.css
@@ -59,9 +59,12 @@ kbd {
 pre {
   background: #282828;
   color: white;
+  display: table;
   font-weight: bold;
+  margin: 0 auto;
   overflow-wrap: break-word;
   padding: 0.2em 0.5em;
+  text-align: left;
   text-decoration-color: white;
   white-space: pre-wrap;
 }
@@ -82,12 +85,8 @@ section .p {
   padding: 0;
 }
 
-section + pre {
-  display: block;
-}
-
-ul, ol, pre {
-  display: table;
+ul, ol {
+  display: inline-block;
   margin: 0 auto;
   text-align: left;
 }
